tests/snapshots/errors/invalid_or_operator.mc
// Test single | (should error - expected ||)
let x = 1 | 2;
